替换模拟方法为robot真实方法